Fix bug with getenv(), improve makefiles

--- a/Makefile.config
+++ b/Makefile.config
@@ -11,7 +11,7 @@ EXTRA_OPTIONS = -O3
 # Extra options to link project with
 EXTRA_LD_OPTIONS = $(EXTRA_OPTIONS)
 
-# Warnings options to compile project with
+# Warning options to compile project with
 WARNING_OPTIONS = -Wall -Wextra -Wshadow -Wfloat-equal -Wno-unused-result # -Weffc++
 
 CFLAGS = $(WARNING_OPTIONS) $(EXTRA_OPTIONS)
